# SkillBox

./: Hello darkness.txt  a06.txt  kmp.cpp  m03_01-04_20250106.cpp  m04_01-09.cpp  m05_01-06.cpp  m06_01-08.cpp  m07_01-08.cpp  m08_01-06.cpp  m09_01-05.cpp  m09_Roman_Number.cpp  m10_01.cpp  m11_01-03.cpp  m12_01-04.cpp  m13_01-03.cpp  m14_01-08.cpp  m14_05_Pimples.cpp  m14_08_Sea_Battle.cpp  m14_Tic-Tac-Toe.cpp  m15_01-04.cpp  m16_01-05.cpp  m17_01-03-1.cpp  m17_01-03.cpp  m18_01-03.cpp  m19_01-05.cpp  m19_Experts.cpp  m19_Search_word.cpp  m20_01-04.cpp  m21_01-04.cpp  m21_04_Dangerous_hunting.cpp  m21_Dangerous_hunting.cpp  m22_01-03.cpp  m23_01-03.cpp  m24_01-03.cpp  m26_01-03.cpp  m26_01-04.cpp  m27_01-03.cpp  m28_01-03.cpp  m28_01.cpp  m28_02.cpp  (+23 more)
CMakeBoost/: CMakeBoost.cpp  CMakeLists.txt
CMakeM25/: CMakeLists.txt
CMakeM25/INCLUDE/: CMakeM25.h  m25common.h  m25computer.h  m25cpu.h  m25disk.h  m25gpu.h  m25kbd.h  m25ram.h  m25surgery.h
CMakeM25/SRC/: CMakeLists.txt  CMakeM25.cpp  CMakeM25main.cpp  m25common.cpp  m25computer.cpp  m25cpu.cpp  m25disk.cpp  m25gpu.cpp  m25kbd.cpp  m25ram.cpp  m25surgery.cpp
CMakeM30_1/: CMakeLists.txt  CMakeM30_1.cpp
CMakeM30_2/: CMakeLists.txt  CMakeM30_2.cpp
CMakeM30_3/: CMakeLists.txt  CMakeM30_3.cpp
CMakeM32_1/: CMakeLists.txt  CMakeM32_1.cpp
CMakeM32_2/: CMakeLists.txt  CMakeM32_2.cpp
CMakeM32_3/: CMakeLists.txt  CMakeM32_3.cpp  cmd.txt  company.pb.cc  company.pb.h  company.proto
PolishReverse/: PolishReverse.cpp
QmlM37_02_Player/: CMakeLists.txt  Main.qml  main.cpp
QmlM37_03_RemoteControl/: CMakeLists.txt  Main.qml  main.cpp
QtM35_01-03/: CMakeLists.txt  QtM35_01-03.cpp
QtM36/: CMakeLists.txt  QtM36.cpp  deploy_Qt6.5.3_MSVC2019_64_cmake-buid-debug.bat  resources.qrc
QtM36_01/: CMakeLists.txt  QtM36_01.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
QtM37/: CMakeLists.txt  caller.ui  callermainwindow.h  main.cpp
QtM37_01_Calculator/: CMakeLists.txt  ReversePolishNotation.h  calculator.cpp  calculator.h  calculator.ui  calculatormainwindow.cpp  calculatormainwindow.h  deploy_Qt6.5.3_MSVC2019_64_RELEASE.bat  deploy_Qt6.5.3_MSVC2019_64_cmake-buid-release.bat  main.cpp
QtM37_02_Player/: CMakeLists.txt  main.cpp  player.ui  playermainwindow.cpp  playermainwindow.h
QtM38_01_Button_Click/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
QtM38_02_HTML/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
QtM38_03_Blur/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
QtQMLTutorial/: CMakeLists.txt  Main.qml
ReversePolishNotation/: ReversePolishNotation.cpp  ReversePolishNotation.h  main.cpp
m19_01_Search_word/: m19_01_Search_word.cpp
m19_02_Text_viewer/: Hello darkness.txt  m19_02_Text_viewer.cpp
m19_03_Payroll/: Payroll.txt  m19_03_Payroll.cpp
m19_04_PNG_file_detector/: m19_04_PNG_file_detector.cpp
m19_05_Experts/: m19_05_Experts.cpp  q02.txt  q05.txt  q06.txt  q08.txt
m19_Experts/: q03.txt  q07.txt  q09.txt  q13.txt
m19_Search_word/: m19_Search_word.cpp
m31_02_Smart_Pointers/: main.cpp  smartptr.h
