cmake_minimum_required(VERSION 3.16)

project(QtM35_01-03 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)

add_executable(QtM35_01-03
  QtM35_01-03.cpp
)
target_link_libraries(QtM35_01-03 Qt${QT_VERSION_MAJOR}::Core)

include(GNUInstallDirs)
install(TARGETS QtM35_01-03
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
